# rmvision_dart

./: .clangd  .gitignore  .gitmodules  LICENSE  README.md  dart.service  dart.sh
RECORD/: README_RECORD.md  clean_space.sh  extract_all_bags.sh  extract_bag.py  rmvision.sh  selective_rosbag_recorder.py
docs/feishu_knowledge_base/: 01_tutorial_wiki_dart.md  02_learning_path_dart.md  03_deployment_dart.md  04_qa_dart.md  05_development_templates.md  06_development_candidates.md  07_debug_records.md  README.md
docx/: extrinsic.txt  intrinsic.txt
src/auto_aim/auto_aim_interfaces/: CMakeLists.txt  package.xml
src/auto_aim/auto_aim_interfaces/msg/: DartProfile.msg  Send.msg  SerialLogger.msg
src/auto_aim/light_detector/: CMakeLists.txt  package.xml
src/auto_aim/light_detector/include/: detector.hpp  detector_node.hpp  motion_gate.hpp  pnp_solver.hpp  stability_gate.hpp
src/auto_aim/light_detector/src/: detector.cpp  detector_node.cpp  pnp_solver.cpp
src/auto_aim/light_detector/test/: test_motion_gate.cpp
src/rm_livox_fusion/: CMakeLists.txt  package.xml
src/rm_livox_fusion/include/: cloud_accumulator_node.hpp  range_fusion_node.hpp
src/rm_livox_fusion/src/: range_fusion_node.cpp  rm_livox_fusion_node.cpp  send_mux_node.cpp
src/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_serial_driver/config/: serial_driver.yaml
src/rm_serial_driver/include/: barcode_scanner.hpp  packet.hpp  rm_serial_driver.hpp
src/rm_serial_driver/src/: barcode_scanner.cpp  rm_serial_driver.cpp
src/vision_bringup/rm_vision_bringup/: package.xml
src/vision_bringup/rm_vision_bringup/config/: camera_info.yaml  camera_info_35mm.yaml  camera_info_50mm.yaml  camera_info_base.yaml  camera_info_outpost.yaml  launch_params.yaml  livox_lidar_config.json  node_params.yaml  topic_record_params.yaml
src/vision_bringup/rm_vision_bringup/launch/: common.py  no_hardware.launch.py  vision_bringup.launch.py
